load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

SRCS = [
    "bsdtar.c",
    "bsdtar.h",
    "bsdtar_platform.h",
    "cmdline.c",
    "creation_set.c",
    "read.c",
    "subst.c",
    "util.c",
    "write.c",
]

cc_binary(
    name = "bsdtar",
    target_compatible_with = select({
        # TODO: not working on macos
        "@platforms//os:macos": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    srcs = SRCS + select({
        "@platforms//os:windows": [
            "bsdtar_windows.c",
            "bsdtar_windows.h",
        ],
        "//conditions:default": [],
    }),
    deps = [
        "//libarchive",
        "//libarchive_fe",
    ],
)

alias(
    name = "tar",
    actual = ":bsdtar",
)
