load("@rules_cc//cc:defs.bzl", "cc_binary")

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "unzip",
    srcs = [
        "bsdunzip.c",
        "bsdunzip.h",
        "bsdunzip_platform.h",
        "cmdline.c",
        "la_getline.c",
        "la_queue.h",
    ],
    target_compatible_with = select({
        # windows/linux missing fnmatch
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "@platforms//os:linux": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = [
        "//libarchive",
        "//libarchive_fe",
    ],
)
