load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_cc//cc:defs.bzl", "cc_test")

_TESTS = [
    "test_acl_nfs4",
    # "test_acl_pax", # unresolved symbol
    "test_acl_platform_nfs4",
    # "test_acl_platform_posix1e", # unresolved symbol
    "test_acl_posix1e",
    # "test_acl_text", # unresolved symbol
    "test_archive_api_feature",
    "test_archive_clear_error",
    "test_archive_cmdline",
    # "test_archive_digest", # unresolved symbol
    "test_archive_getdate",
    "test_archive_match_owner",
    "test_archive_match_path",
    "test_archive_match_time",
    "test_archive_pathmatch",
    "test_archive_read_add_passphrase",
    "test_archive_read_close_twice",
    "test_archive_read_close_twice_open_fd",
    "test_archive_read_close_twice_open_filename",
    "test_archive_read_multiple_data_objects",
    "test_archive_read_next_header_empty",
    "test_archive_read_next_header_raw",
    "test_archive_read_open2",
    "test_archive_read_set_filter_option",
    "test_archive_read_set_format_option",
    "test_archive_read_set_option",
    "test_archive_read_set_options",
    "test_archive_read_support",
    "test_archive_set_error",
    "test_archive_string",
    "test_archive_string_conversion",
    # "test_archive_write_add_filter_by_name", # unresolved symbol
    "test_archive_write_set_filter_option",
    # "test_archive_write_set_format_by_nam # unresolved symbole",
    # "test_archive_write_set_format_filter_by_ext", # unresolved symbol
    "test_archive_write_set_format_option",
    "test_archive_write_set_option",
    "test_archive_write_set_options",
    "test_archive_write_set_passphrase",
    "test_bad_fd",
    "test_compat_bzip2",
    "test_compat_cpio",
    "test_compat_gtar",
    "test_compat_gzip",
    "test_compat_lz4",
    "test_compat_lzip",
    "test_compat_lzma",
    "test_compat_lzop",
    "test_compat_mac",
    "test_compat_perl_archive_tar",
    "test_compat_plexus_archiver_tar",
    "test_compat_solaris_pax_sparse",
    "test_compat_solaris_tar_acl",
    # "test_compat_star_acl", # unresolved symbol
    "test_compat_tar_directory",
    "test_compat_tar_hardlink",
    "test_compat_uudecode",
    "test_compat_uudecode_large",
    "test_compat_xz",
    # "test_compat_zip", # unresolved symbol
    "test_compat_zstd",
    "test_empty_write",
    "test_entry",
    "test_entry_strmode",
    "test_extattr_freebsd",
    "test_filter_count",
    # "test_fuzz", # unresolved symbol
    # "test_gnutar_filename_encoding", # unresolved symbol
    "test_link_resolver",
    "test_open_failure",
    "test_open_fd",
    "test_open_file",
    "test_open_filename",
    "test_pax_filename_encoding",
    "test_pax_xattr_header",
    "test_read_data_large",
    "test_read_disk",
    "test_read_disk_directory_traversals",
    "test_read_disk_entry_from_file",
    "test_read_extract",
    "test_read_file_nonexistent",
    # "test_read_filter_compress", # unresolved symbol
    "test_read_filter_grzip",
    "test_read_filter_lrzip",
    "test_read_filter_lzop",
    "test_read_filter_lzop_multiple_parts",
    "test_read_filter_program",
    "test_read_filter_program_signature",
    "test_read_filter_uudecode",
    "test_read_filter_uudecode_raw",
    "test_read_format_7zip",
    "test_read_format_7zip_encryption_data",
    "test_read_format_7zip_encryption_header",
    "test_read_format_7zip_encryption_partially",
    "test_read_format_7zip_malformed",
    "test_read_format_7zip_packinfo_digests",
    "test_read_format_ar",
    "test_read_format_cab",
    "test_read_format_cab_filename",
    "test_read_format_cpio_afio",
    "test_read_format_cpio_bin",
    "test_read_format_cpio_bin_Z",
    "test_read_format_cpio_bin_be",
    "test_read_format_cpio_bin_bz2",
    "test_read_format_cpio_bin_gz",
    "test_read_format_cpio_bin_le",
    "test_read_format_cpio_bin_lzip",
    "test_read_format_cpio_bin_lzma",
    "test_read_format_cpio_bin_xz",
    # "test_read_format_cpio_filename", # unresolved symbol
    "test_read_format_cpio_odc",
    "test_read_format_cpio_svr4_bzip2_rpm",
    "test_read_format_cpio_svr4_gzip",
    "test_read_format_cpio_svr4_gzip_rpm",
    "test_read_format_cpio_svr4c_Z",
    "test_read_format_empty",
    # "test_read_format_gtar_filename", # unresolved symbol
    "test_read_format_gtar_gz",
    "test_read_format_gtar_lzma",
    "test_read_format_gtar_sparse",
    "test_read_format_gtar_sparse_skip_entry",
    "test_read_format_iso_Z",
    "test_read_format_iso_multi_extent",
    "test_read_format_iso_xorriso",
    "test_read_format_isojoliet_bz2",
    "test_read_format_isojoliet_long",
    "test_read_format_isojoliet_rr",
    "test_read_format_isojoliet_versioned",
    "test_read_format_isorr_bz2",
    "test_read_format_isorr_ce",
    "test_read_format_isorr_new_bz2",
    "test_read_format_isorr_rr_moved",
    "test_read_format_isozisofs_bz2",
    "test_read_format_lha",
    "test_read_format_lha_bugfix_0",
    "test_read_format_lha_filename",
    # "test_read_format_lha_filename_utf16", # unresolved symbol
    "test_read_format_mtree",
    "test_read_format_mtree_crash747",
    "test_read_format_pax_bz2",
    # "test_read_format_rar", # unresolved symbol
    # "test_read_format_rar5", # unresolved symbol
    "test_read_format_rar_encryption_data",
    "test_read_format_rar_encryption_header",
    "test_read_format_rar_encryption_partially",
    "test_read_format_rar_filter",
    "test_read_format_rar_invalid1",
    "test_read_format_raw",
    "test_read_format_tar",
    "test_read_format_tar_concatenated",
    "test_read_format_tar_empty_filename",
    "test_read_format_tar_empty_pax",
    "test_read_format_tar_empty_with_gnulabel",
    "test_read_format_tar_filename",
    "test_read_format_tar_invalid_pax_size",
    "test_read_format_tbz",
    "test_read_format_tgz",
    "test_read_format_tlz",
    "test_read_format_txz",
    "test_read_format_tz",
    "test_read_format_ustar_filename",
    "test_read_format_warc",
    "test_read_format_xar",
    "test_read_format_zip",
    # "test_read_format_zip_7075_utf8_paths", # unresolved symbol
    "test_read_format_zip_comment_stored",
    "test_read_format_zip_encryption_data",
    "test_read_format_zip_encryption_header",
    "test_read_format_zip_encryption_partially",
    "test_read_format_zip_extra_padding",
    # "test_read_format_zip_filename", # unresolved symbol
    "test_read_format_zip_high_compression",
    "test_read_format_zip_jar",
    "test_read_format_zip_mac_metadata",
    "test_read_format_zip_malformed",
    "test_read_format_zip_msdos",
    "test_read_format_zip_nested",
    "test_read_format_zip_nofiletype",
    # "test_read_format_zip_padded", # unresolved symbol
    "test_read_format_zip_sfx",
    "test_read_format_zip_traditional_encryption_data",
    # "test_read_format_zip_winzip_aes", # unresolved symbol
    # "test_read_format_zip_winzip_aes_large", # unresolved symbol
    "test_read_format_zip_with_invalid_traditional_eocd",
    # "test_read_format_zip_zip64", # unresolved symbol
    "test_read_large",
    "test_read_pax_truncated",
    "test_read_pax_xattr_rht_security_selinux",
    "test_read_pax_xattr_schily",
    "test_read_position",
    "test_read_set_format",
    "test_read_too_many_filters",
    "test_read_truncated",
    # "test_read_truncated_filter", # unresolved symbol
    "test_short_writes",
    "test_sparse_basic",
    "test_tar_filenames",
    "test_tar_large",
    # "test_ustar_filename_encoding", # unresolved symbol
    "test_ustar_filenames",
    "test_warn_missing_hardlink_target",
    "test_write_disk",
    "test_write_disk_appledouble",
    "test_write_disk_failures",
    "test_write_disk_fixup",
    "test_write_disk_hardlink",
    "test_write_disk_hfs_compression",
    "test_write_disk_lookup",
    "test_write_disk_mac_metadata",
    "test_write_disk_no_hfs_compression",
    "test_write_disk_perms",
    "test_write_disk_secure",
    "test_write_disk_secure744",
    "test_write_disk_secure745",
    # "test_write_disk_secure746", # unresolved symbol
    "test_write_disk_sparse",
    "test_write_disk_symlink",
    "test_write_disk_times",
    "test_write_filter_b64encode",
    "test_write_filter_bzip2",
    "test_write_filter_compress",
    "test_write_filter_gzip",
    "test_write_filter_gzip_timestamp",
    "test_write_filter_lrzip",
    "test_write_filter_lz4",
    "test_write_filter_lzip",
    "test_write_filter_lzma",
    "test_write_filter_lzop",
    "test_write_filter_program",
    "test_write_filter_uuencode",
    "test_write_filter_xz",
    "test_write_filter_zstd",
    "test_write_format_7zip",
    # "test_write_format_7zip_empty", # unresolved symbol
    # "test_write_format_7zip_large", # unresolved symbol
    "test_write_format_ar",
    "test_write_format_cpio",
    "test_write_format_cpio_empty",
    "test_write_format_cpio_newc",
    "test_write_format_cpio_odc",
    "test_write_format_gnutar",
    "test_write_format_gnutar_filenames",
    "test_write_format_iso9660",
    "test_write_format_iso9660_boot",
    "test_write_format_iso9660_empty",
    "test_write_format_iso9660_filename",
    "test_write_format_iso9660_zisofs",
    "test_write_format_mtree",
    "test_write_format_mtree_absolute_path",
    "test_write_format_mtree_classic",
    "test_write_format_mtree_classic_indent",
    "test_write_format_mtree_fflags",
    "test_write_format_mtree_no_separator",
    "test_write_format_mtree_quoted_filename",
    "test_write_format_pax",
    "test_write_format_raw",
    "test_write_format_raw_b64",
    "test_write_format_shar_empty",
    "test_write_format_tar",
    "test_write_format_tar_empty",
    "test_write_format_tar_sparse",
    "test_write_format_tar_ustar",
    "test_write_format_tar_v7tar",
    "test_write_format_warc",
    "test_write_format_warc_empty",
    "test_write_format_xar",
    "test_write_format_xar_empty",
    "test_write_format_zip",
    "test_write_format_zip64_stream",
    "test_write_format_zip_compression_store",
    "test_write_format_zip_empty",
    "test_write_format_zip_empty_zip64",
    # "test_write_format_zip_entry_size_unset", # unresolved symbol
    "test_write_format_zip_file",
    "test_write_format_zip_file_zip64",
    "test_write_format_zip_large",
    # "test_write_format_zip_stream", # currently failing on bazel
    # "test_write_format_zip_zip64", # unresolved symbol
    "test_write_open_memory",
    "test_write_read_format_zip",
    "test_xattr_platform",
    # "test_zip_filename_encoding", # unresolved symbol
]

[write_file(
    name = "{}_list_h".format(test),
    out = "_{}_list_h/list.h".format(test),
    content = ["DEFINE_TEST({})".format(test)],
) for test in _TESTS]

[cc_library(
    name = "{}_list".format(test),
    hdrs = ["_{}_list_h/list.h".format(test)],
    strip_include_prefix = "_{}_list_h".format(test),
) for test in _TESTS]

cc_library(
    name = "lib",
    strip_include_prefix = ".",
    hdrs = ["test.h"],
)

[cc_test(
    name = test,
    includes = ["."],
    srcs = ["//test_utils:test_main.c", "read_open_memory.c"] + ["{}.c".format(test)],
    data = glob(["*.uu"]),
    deps = [
        ":lib",
        ":{}_list".format(test),
        "//test_utils:common",
        "//libarchive",
        "//libarchive:internal_hdrs",
    ],
) for test in _TESTS]
